# amble

./: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  build.rs  clippy.toml  cross.toml
.github/workflows/: audit.yml  ci.yml  github-release.yml  manual-tag.yml  release-tag.yml  release.yml  tag.yml  validate-version.yml
crates/amble/: Cargo.toml
crates/amble/src/: cargo.rs  lib.rs  libs.rs  license.rs  utils.rs
crates/preamble/: Cargo.toml
crates/preamble/etc/: README.md
crates/preamble/etc/workflows/: ci.yml  github-release.yml  release.yml  validate-version.yml
crates/preamble/src/: bins.rs  cargo.rs  ci.rs  etc.rs  git.rs  gitignore.rs  lib.rs  libs.rs  license.rs  root.rs  telemetry.rs  utils.rs
crates/preamble2/: Cargo.toml  README.md
crates/preamble2/src/: builder.rs  config.rs  lib.rs  pipeline.rs  telemetry.rs
crates/preamble2/src/config/: ci.rs  globals.rs  misc.rs  root.rs
src/: bins.rs  cargo.rs  ci.rs  cli.rs  etc.rs  gitignore.rs  lib.rs  libs.rs  license.rs  main.rs  root.rs  telemetry.rs  utils.rs
templates/lib/: lib.rs
