[workspace]
members = ["bin/*", "crates/*"]
default-members = ["bin/amble"]
resolver = "2"

[workspace.package]
name = "amble"
description = "First class, scalable rust project generator with batteries included."
version = "0.1.31"
edition = "2021"
license = "MIT"
authors = ["refcell"]
keywords = ["amble", "generator", "template", "scaffold", "cli"]
repository = "https://github.com/refcell/amble"
homepage = "https://github.com/refcell/amble"
exclude = ["**/target", "benches", "tests"]

[workspace.dependencies]
anyhow = "1.0"
inquire = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
aho-corasick = "1.1"
semver = "1.0"
leon = "2.0"
regex = "1.10"
whoami = "1.4"
ptree = "0.4"
image = "0.24"
lice = "0.1"
chrono = "0.4"
gitignores = "2.3"
prettytable = "0.10"
toml_edit = "0.20"
tokio = { version = "1.11", features = ["full"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[profile.dev]
opt-level = 1
overflow-checks = false

[profile.bench]
debug = true
