[workspace]
members = ["bin/*", "crates/*"]
default-members = ["bin/amble"]
resolver = "2"

[workspace.package]
description = "First class, scalable rust project generator with batteries included."
version = "0.1.54"
edition = "2021"
license = "MIT"
authors = ["refcell"]
keywords = ["amble", "generator", "template", "scaffold", "cli"]
repository = "https://github.com/refcell/amble"
homepage = "https://github.com/refcell/amble"
exclude = ["**/target", "benches", "tests"]
include = ["bin/*", "crates/*", "etc"]

[workspace.dependencies]
anyhow = "1.0"
inquire = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
aho-corasick = "1.1"
semver = "1.0"
leon = "2.0"
regex = "1.10"
whoami = "1.4"
ptree = "0.4"
image = "0.24"
lice = "0.1"
chrono = "0.4"
gitignores = "2.3"
prettytable = "0.10"
toml_edit = "0.20"
tokio = { version = "1.11", features = ["full"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }

# Like release, but with full debug symbols. Useful for e.g. `perf`.
[profile.debug-fast]
inherits = "release"
debug = true

[profile.dev]
opt-level = 1
overflow-checks = false

[profile.bench]
debug = true

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false
